Fix/gateways baclogprojected (#95)
* create adapter and gateway to get backlog and fixed tests affected by the change

* move backlogGateway from generic package to backlogstatus because when implemented previus change it gateway is not genric

* add adapter test and fix adapter errors detected when was running tests

* code quality

* comments

---------

Co-authored-by: Julian <julian.leonel3004@gmaio.com>